--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.0",
